fixed error in feedback q1

--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -22,7 +22,7 @@
         <label class="form-check-label" for="q1RadioNo">No</label>
     </div>
         <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" id="q1RadioUnsure" name="q1Radio" value="unsure" [(ngModel)]="device">
+            <input class="form-check-input" type="radio" id="q1RadioUnsure" name="q1Radio" value="unsure" [(ngModel)]="q1Check">
             <label class="form-check-label" for="q1RadioUnsure">Unsure</label>
         </div>
 <!--        <p class="required">(required)</p>-->
