--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -4,38 +4,33 @@
   background:#4C6E6E !important;
 }
 
-button.non-click {
+
+.non-click {
   cursor: default;
+
 }
 
+.non-click:hover {
+  color: #fff;
+  background-color: #6c757d;
+  border-color: #6c757d;
+}
+
+.non-click:active {
+  box-shadow:none;
+}
+.non-click:active:focus {
+  box-shadow:none;
+  outline:none;
+}
+
+.non-click:focus {
+  outline: none;
+}
 
 .btn-group {
   margin-left: 15px;
   margin-right: 15px;
-}
-
-.btn-red {
-  background: red;
-  border-color: gray;
-  color: white;
-}
-
-.btn-green {
-  background: green;
-  border-color: gray;
-  color: white;
-}
-
-.btn-blue {
-  background: blue;
-  border-color: gray;
-  color: white;
-}
-
-.btn-black {
-  background: black;
-  color: white;
-  border-color: white;
 }
 
 
