--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,6 +22,8 @@
 <div class="buttons">
     <div class="btn-group" role="group">
       <button class="btn btn-secondary" type="button" (click)= clear()>Reset</button>
+      <button class="btn btn-secondary" type="button" (click)= prevPage()>Prev</button>
+      <button class="btn btn-secondary" type="button" (click)= nextPage()>Next</button>
     </div>
 
 <!--    <div class="btn-group mr-3">-->
