--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,53 +1,80 @@
 <div class="container">
 
-
-<div class="container canvas" [class.newBG]="state">
-<!--[scrollX]="true"-->
-<!--[scrollY]="true">-->
+  <div class="container canvas" [class.newBG]="state">
+    <!--[scrollX]="true"-->
+    <!--[scrollY]="true">-->
 
     <!--
   <div class="image">
     <img class="firstPageImage" src="../assets/sampleImage.jpg" alt="First page"> -->
 
 
-  <div id="canvas-background" [ngStyle]="{ 'background-image': 'url(' + bgImage + ')'}">
-    <canvas id="myCanvas" width="680" height="870"></canvas>
-  </div>
+    <div id="canvas-background" [ngStyle]="{ 'background-image': 'url(' + bgImage + ')'}">
+      <canvas id="myCanvas" width="680" height="870"></canvas>
+    </div>
 
-</div>
+  </div>
 
   <!--<img src="{{ screen }}" *ngIf="state">-->
 
 
-<div class="buttons">
-    <div class="btn-group" role="group">
-      <button class="btn btn-secondary" type="button" (click)= clear()>Reset</button>
-      <button class="btn btn-secondary" type="button" (click)= prevPage()>Prev</button>
-      <button class="btn btn-secondary" type="button" (click)= nextPage()>Next</button>
+  <div class="buttons">
+    <div class="btn-group">
+      <button type="button" class="btn btn-secondary" (click)=prevPage()>Prev</button>
     </div>
 
-<!--    <div class="btn-group mr-3">-->
-<!--        <button type="button" class="btn btn-secondary">Pen colour</button>-->
-<!--        <div class="btn-group" ngbDropdown role="group" >-->
-<!--            <button class="btn btn-secondary dropdown-toggle-split" ngbDropdownToggle></button>-->
-<!--        <div ngbDropdownMenu class="dropdown-menu">-->
-<!--            <button class="btn btn-red btn-small" ngbDropdownItem (click)="changeColour('red')">R</button>-->
-<!--            <button class="btn btn-blue btn-small" ngbDropdownItem (click)="changeColour('blue')">B</button>-->
-<!--            <button class="btn btn-green btn-small" ngbDropdownItem (click)="changeColour('green')">G</button>-->
-<!--            <button class="btn btn-black btn-small" ngbDropdownItem (click)="changeColour('black')">Bl</button>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--    </div>-->
+    <button type="button" class="btn btn-secondary" (click)=clear()>Reset</button>
 
-    <button class="btn btn-secondary" [(colorPicker)]="colour"  [cpPresetColors]="['#000000', '#2889e9']" [cpAddColorButton]="true" [cpOKButton]=true [cpCancelButton]=true [style.background]="colour"  (colorPickerSelect)="changeColour(colour)"><img src="./assets/palette.svg" height="25"/></button>
 
-    <div class="btn-group" role="group">
-      <button class="btn btn-light non-click" onClick="this.blur();">Pen size:</button>
-      <button class="btn btn-secondary" type="button"(click)="decreaseWidth()">-</button>
 
-      <button class="btn btn-light non-click" onClick="this.blur();">{{canvas.freeDrawingBrush.width}}</button>
-      <button class="btn btn-secondary" type="button"(click)="increaseWidth()">+</button>
+    <button type="button" class="btn btn-secondary" (click)=erase()><img src="./assets/erase2.svg"
+        height="25" /></button>
+
+
+
+    <!--    <div class="btn-group mr-3"> -->
+    <!--        <button type="button" class="btn btn-secondary">Pen colour</button>-->
+    <!--        <div class="btn-group" ngbDropdown role="group" >-->
+    <!--            <button class="btn btn-secondary dropdown-toggle-split" ngbDropdownToggle></button>-->
+    <!--        <div ngbDropdownMenu class="dropdown-menu">-->
+    <!--            <button class="btn btn-red btn-small" ngbDropdownItem (click)="changeColour('red')">R</button>-->
+    <!--            <button class="btn btn-blue btn-small" ngbDropdownItem (click)="changeColour('blue')">B</button>-->
+    <!--            <button class="btn btn-green btn-small" ngbDropdownItem (click)="changeColour('green')">G</button>-->
+    <!--            <button class="btn btn-black btn-small" ngbDropdownItem (click)="changeColour('black')">Bl</button>-->
+    <!--        </div>-->
+    <!--    </div>-->
+    <!--    </div>-->
+
+    <div class="btn-group mr-3">
+      <button type="button" class="btn btn-secondary" type="button" (click)=enableDraw()><img src="./assets/edit.svg"
+          height="25" /></button>
+      <div class="btn-group" ngbDropdown role="group">
+        <button class="btn btn-secondary dropdown-toggle-split" ngbDropdownToggle></button>
+
+        <div ngbDropdownMenu class="dropdown-menu">
+
+          <button type="button" class="btn" [(colorPicker)]="colour" [cpPresetColors]="['#000000', '#2889e9']"
+            [cpAddColorButton]="true" [cpOKButton]=true [cpCancelButton]=true [style.background]="colour"
+            (colorPickerSelect)="changeColour(colour)"><img src="./assets/palette.svg" height="25" /></button>
+
+
+          <button class="btn btn-light non-click" onClick="this.blur();">Pen size:</button>
+          <button type="button" class="btn btn-secondary" type="button" (click)="decreaseWidth()">-</button>
+
+          <button class="btn btn-light non-click" onClick="this.blur();">{{canvas.freeDrawingBrush.width}}</button>
+          <button type="button" class="btn btn-secondary" type="button" (click)="increaseWidth()">+</button>
+        </div>
+      </div>
+    </div>
+
+
+
+
+
+    <button type="button" class="btn btn-secondary" (click)=feedbackClicked()>Feedback</button>
+    <div class="btn-group">
+      <button type="button" class="btn btn-secondary" (click)=nextPage()>Next</button>
+    </div>
+
   </div>
-    <button class="btn btn-secondary" type="button" (click)= feedbackClicked()>Feedback</button>
-</div>
 </div>
