--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -1,15 +1,11 @@
 <h2 mat-dialog-title>Hands-On Reading</h2>
 
 <mat-dialog-content >
-  
-<p>Welcome to Hands-On Reading. Made as part of an AHRC project at Newcastle University.</p>
-    <p>After closing this window, please draw on the digital canvas. This works best with a tablet and pen if you have one. </p>
 
-    <p>When you feel ready, click the feedback button to answer a few questions on your experience. This app examines how we handwrite and how we read, so please note that your edited canvas will be automatically sent to us when you hit "feedback". </p>
+    <p>This is an annotation tool designed to help you interact with texts as you read them. Please feel free to make as many marks on the page as you wish.</p>
 
-<p> Clicking 'Reset' does not save or send us the edited canvas. <br/>
-    There is also no way for you to pause and resume. If you do not wish to share your edited canvas or feedback with us, simply click reset.</p>
-    <p>Credits: Matthew Coneys, Kate Court, James Cummings, Fiona Galston, Aditi Nafde, and Tiago Sousa Garcia </p>
+<p> We'd be grateful for your feedback when you've finished.</p>
+    <p>Credits: Aditi Nafde, Matthew Coneys, Kate Court, James Cummings, Fiona Galston, and Tiago Sousa Garcia. With thanks to the AHRC, ATNU, and Newcastle University </p>
 
     <img src="./assets/AHRC.png" height="50"><img class="NUImage" src="./assets/NU.png" height="50">
 </mat-dialog-content>
