add red to preset colours

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -53,7 +53,7 @@
 
         <div ngbDropdownMenu class="dropdown-menu">
           <div class="btn-group">
-            <button type="button" class="btn" [(colorPicker)]="colour" [cpPresetColors]="['#000000', '#2889e9']"
+            <button type="button" class="btn" [(colorPicker)]="colour" [cpPresetColors]="['#000000', '#2889e9', '#FF0000']"
               [cpAddColorButton]="true" [cpOKButton]=true [cpCancelButton]=true [style.background]="colour"
               (colorPickerSelect)="changeColour(colour)"><img src="./assets/palette.svg" height="25" /></button>
 
