--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,89 +1,69 @@
 <div class="container">
 
-  <div class="container canvas" [class.newBG]="state">
-    <!--[scrollX]="true"-->
-    <!--[scrollY]="true">-->
+    <div class="container canvas" [class.newBG]="state">
+        <!--[scrollX]="true"-->
+        <!--[scrollY]="true">-->
 
-    <!--
-  <div class="image">
-    <img class="firstPageImage" src="../assets/sampleImage.jpg" alt="First page"> -->
-
-
-    <div id="canvas-background" [ngStyle]="{ 'background-image': 'url(' + bgImage + ')'}">
-      <canvas id="myCanvas" width="680" height="870"></canvas>
-    </div>
-
-  </div>
-
-  <!--<img src="{{ screen }}" *ngIf="state">-->
-
-
-  <div class="buttons">
-    <div class="btn-group">
-      <button type="button" class="btn btn-secondary" (click)=prevPage()><img src="./assets/chevron-back.svg"
-          height="25" /></button>
-    </div>
-
-
-
-    <button type="button" class="btn btn-secondary" (click)=erase()><img src="./assets/erase2.svg"
-        width="25"/></button>
-
-
-
-    <!--    <div class="btn-group mr-3"> -->
-    <!--        <button type="button" class="btn btn-secondary">Pen colour</button>-->
-    <!--        <div class="btn-group" ngbDropdown role="group" >-->
-    <!--            <button class="btn btn-secondary dropdown-toggle-split" ngbDropdownToggle></button>-->
-    <!--        <div ngbDropdownMenu class="dropdown-menu">-->
-    <!--            <button class="btn btn-red btn-small" ngbDropdownItem (click)="changeColour('red')">R</button>-->
-    <!--            <button class="btn btn-blue btn-small" ngbDropdownItem (click)="changeColour('blue')">B</button>-->
-    <!--            <button class="btn btn-green btn-small" ngbDropdownItem (click)="changeColour('green')">G</button>-->
-    <!--            <button class="btn btn-black btn-small" ngbDropdownItem (click)="changeColour('black')">Bl</button>-->
-    <!--        </div>-->
-    <!--    </div>-->
-    <!--    </div>-->
-
-
-      <button type="button" class="btn btn-secondary" type="button" (click)=enableDraw()><img src="./assets/edit.svg"
-          height="25" /></button>
-      <div class="btn-group" ngbDropdown role="group">
-        <button class="btn btn-secondary dropdown-toggle-split" ngbDropdownToggle><img src="./assets/dots.svg"
-          height="25" /></button>
-
-        <div ngbDropdownMenu class="dropdown-menu">
-          <div class="btn-group">
-            <button type="button" class="btn" [(colorPicker)]="colour" [cpPresetColors]="['#000000', '#2889e9', '#FF0000']"
-              [cpAddColorButton]="true" [cpOKButton]=true [cpCancelButton]=true [style.background]="colour"
-              (colorPickerSelect)="changeColour(colour)"><img src="./assets/palette.svg" height="25" /></button>
-
-          </div>
-          <div class="btn-group">
-            <button type="button" class="btn btn-secondary" type="button" (click)="decreaseWidth()">-</button>
-            <button class="btn btn-light non-click" onClick="this.blur();">{{canvas.freeDrawingBrush.width}}</button>
-            <button type="button" class="btn btn-secondary" type="button" (click)="increaseWidth()">+</button>
-          </div>
-          <button type="button" class="btn btn-secondary" (click)=clear()>Reset</button>
+        <div id="canvas-background" [ngStyle]="{ 'background-image': 'url(' + bgImage + ')'}">
+            <canvas id="myCanvas" width="680" height="870"></canvas>
         </div>
-      </div>
 
-
-        <button type="button" class="btn btn-secondary" (click)=feedbackClicked()><img src="./assets/chat.svg"
-          height="25" /></button>
- 
-
-
-
-
-
-
-
-
-
-    <div class="btn-group">
-      <button type="button" class="btn btn-secondary" (click)=nextPage()><img src="./assets/chevron-forward.svg"
-          height="25" /></button>
     </div>
 
-  </div>
+    <!--<img src="{{ screen }}" *ngIf="state">-->
+
+    <!-- Bottom navbar -->
+    <div class="navbar fixed-bottom container">
+
+        <button type="button" class="btn btn-success" (click)=prevPage()><img src="./assets/chevron-back.svg"
+                                                                              height="25"/></button>
+
+
+        <!--Drawing controls-->
+        <div class="btn-group controls">
+            <button type="button" class="btn btn-secondary" (click)=erase()><img src="./assets/erase2w.svg"
+                                                                                 width="25"/></button>
+
+            <button type="button" class="btn btn-secondary" type="button" (click)=enableDraw()><img
+                    src="./assets/edit.svg"
+                    height="25"/></button>
+
+            <!--  colour and size drop-up menu  -->
+            <div class="btn-group" ngbDropdown placement="top-left" role="group">
+                <button class="btn btn-secondary dropdown-toggle-split" ngbDropdownToggle><img src="./assets/dotsw.svg"
+                                                                                               height="25"/></button>
+
+                <div ngbDropdownMenu class="dropdown-menu">
+                    <div class="btn-group">
+                        <button type="button" class="btn" [(colorPicker)]="colour"
+                                [cpPresetColors]="['#000000', '#2889e9', '#FF0000']"
+                                [cpAddColorButton]="true" [cpOKButton]=true [cpCancelButton]=true
+                                [style.background]="colour"
+                                (colorPickerSelect)="changeColour(colour)"><img src="./assets/palette.svg" height="25"/>
+                        </button>
+                    </div>
+
+                    <!--          brush width-->
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-secondary" type="button" (click)="decreaseWidth()">-
+                        </button>
+                        <button class="btn btn-light non-click"
+                                onClick="this.blur();">{{canvas.freeDrawingBrush.width}}</button>
+                        <button type="button" class="btn btn-secondary" type="button" (click)="increaseWidth()">+
+                        </button>
+                    </div>
+                    <button type="button" class="btn btn-secondary" (click)=clear()>Reset</button>
+                </div>
+            </div>
+            <!-- end of colour and size drop-up-->
+
+            <button type="button" class="btn btn-secondary" (click)=feedbackClicked()><img src="./assets/chat2.svg"
+                                                                                           height="25"/></button>
+        </div>
+
+        <button type="button" class="btn btn-success right left" (click)=nextPage()><img
+                src="./assets/chevron-forward.svg"
+                height="25"/></button>
+
+    </div>
 </div>
