--- a/src/global.scss
+++ b/src/global.scss
@@ -1,5 +1,9 @@
+// next and previous page buttons
+$success: #54B877;
 
-body{
-  background-color: black !important;
-  color: white;
-}
+// control buttons
+$secondary: #465251;
+
+@import "~bootswatch/dist/darkly/variables";
+@import "~bootstrap/scss/bootstrap";
+@import "~bootswatch/dist/darkly/bootswatch";
