--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -39,7 +39,7 @@
                     <div class="btn-group">
                         <button type="button" class="btn btn-secondary" type="button" (click)="decreaseWidth()">-
                         </button>
-                        <button class="btn btn-light non-click"
+                        <button class="btn btn-secondary non-click"
                                 onClick="this.blur();">{{canvas.freeDrawingBrush.width}}</button>
                         <button type="button" class="btn btn-secondary" type="button" (click)="increaseWidth()">+
                         </button>
@@ -54,7 +54,7 @@
                     </button>
 
 
-                    <button type="button" class="btn btn-secondary" (click)=clear()>Reset</button>
+                    <button type="button" class="btn btn-secondary" (click)=clear()>Reset page</button>
                     </div>
 
                 </div>
